[package]
name = "near-contract-project"
version = "0.1.0"
edition = "2021"

[dependencies]
near-sdk = "5.5.0"
near-sdk-contract-tools = "3.0.2"  # Ensure this version matches your code requirements
borsh = "1.5.2"
near-sdk-contract-tools-macros = "3.0.2"


[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
