[package]
name = "near-contract-project"
version = "0.1.0"
edition = "2021"

[dependencies]
near-contract-standards = "5.5.0"
near-sdk = "5.5.0"
borsh = "1.5.3"
near-sdk-contract-tools = "3.0.2"

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true

